Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70222

Qt Bluetooth LE doesn't detect Battery services

XMLWordPrintable

    • Linux/X11
    • 21
    • ba0988639b7951798002be10d6868718d56141f6 (qt/qtconnectivity/5.12) ca96a42035 (qt/tqtc-qtconnectivity/5.15.10)
    • Team A Foundation Sprint 56, Team A Foundation Sprint 57

      Using lowenergy scanner I can't detect battery service of my remote controller - it is not listed after clicking device in loweneryscanner example.

       

      Seems like a regression - with Qt 5.9.1 works ok.

       

      With Qt 5.11.1:

      3 services are detected:

      • 0x1801
      • my custom primary service
      • and device information service (0x180a)

      With Qt 5.9.5:

      • 0x1800
      • 0x1801
      • my custom
      • 0x180a
      • batt 0x180f

       

       

        1. battery_service.jpg
          53 kB
          Alex Blasche
        2. batteryservicemapping.jpg
          63 kB
          Alex Blasche
        3. ble_qt5111_not_working.log
          18 kB
          Tomasz Olszak
        4. ble_qt591_working.log
          2 kB
          Tomasz Olszak
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vuokko Juha Vuolle
            tolszak Tomasz Olszak
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes