src/bluetooth/bluez/bluez.pri
@@ -22,6 +22,7 @@ HEADERS += bluez/manager_p.h \
            bluez/gattchar1_p.h \
            bluez/gattdesc1_p.h \
            bluez/gattservice1_p.h \
+           bluez/battery1_p.h \
            bluez/bluez_data_p.h \
            bluez/hcimanager_p.h \
            bluez/remotedevicemanager_p.h \
@@ -51,6 +52,7 @@ SOURCES += bluez/manager.cpp \
            bluez/gattchar1.cpp \
            bluez/gattdesc1.cpp \
            bluez/gattservice1.cpp \
+           bluez/battery1.cpp \
            bluez/hcimanager.cpp \
            bluez/remotedevicemanager.cpp \
            bluez/bluetoothmanagement.cpp
